# Abuse-Helper

./: .gitignore  README.md  compose.test.yml  compose.yaml  kc.json
.github/workflows/: rust-ci.yml
abuse-helper/: Cargo.toml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 0000_create_migrations_table.sql  0001_create-customers.sql  0001_create-customers_up.sql  0002_add-dummy-customer.sql  0002_create-nctns.sql  0003_create-nctns.sql  0003_create_users.sql  0004_add-dummy-nctns.sql  0004_create_blacklisted_tokens.sql  0005_create_user_logs.sql  0005_create_users.sql  0006_create_blacklisted_tokens.sql  0006_create_emails_table.sql  0007_add_is_sent_to_emails.sql  0007_create_tickets_table.sql  0008_create_tickets_table.sql  0008_update_tickets_analysis.sql  0009_add_foreign_key_constraint.sql  0009_create_email_tickets_table.sql  0010_remove_email_id_from_tickets.sql  0011_change_email_id_to_uuid.sql
backend/src/: auth.rs  common.rs  customer.rs  lib.rs  main.rs  postgres.rs
backend/src/llm/: analyzer.rs  client.rs  mod.rs  parser.rs  threat_analysis.rs
backend/src/middleware/: auth.rs  logger.rs  mod.rs
backend/src/models/: auth.rs  customer.rs  email.rs  es.rs  mod.rs  nctns.rs  requests.rs  ticket.rs  user.rs  user_log.rs
backend/src/routes/: auth.rs  config.rs  customer.rs  email.rs  mod.rs  nctns.rs  ticket.rs  util.rs
backend/src/tests/: auth_tests.rs  common.rs  customer_tests.rs  mod.rs  nctns_tests.rs  whois_tests.rs
frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  globals.d.ts  index.css  index.tsx  main.tsx  setupProxy.js
frontend/src/components/: Login.jsx  Navbar.tsx  Search.jsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/page/: dashboard.tsx  emails.tsx  login.tsx  tickets.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: Dashboard.tsx
