[package]
name = "abuse-helper"
version = "0.1.0"
authors = [
    "Elie Chamoun <elieechamoun@gmail.com>",
    "Habib Ayoub <habibbayoubb@gmail.com>",
]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-web-middleware-keycloak-auth = "0.4.2"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
env_logger = "^0.8"
imap = "2.4.1"
lettre = { version = "0.11.5", features = [
    "builder",
    "tokio1-native-tls",
    "serde",
] }
log = "^0.4"
native-tls = "0.2.11"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio-postgres-migration = "^0.1"
whois-rust = { version = "1.6.0", features = ["tokio"] }
