[package]
name = "abuse_helper"
version = "0.1.0"
authors = [
    "Elie Chamoun <elieechamoun@gmail.com>",
    "Habib Ayoub <habibbayoubb@gmail.com>",
]
edition = "2021"

[lib]
name = "abuse_helper"
path = "src/lib.rs"

[[bin]]
name = "abuse_helper"
path = "src/main.rs"

[dependencies]
lettre = { version = "0.11.5", features = [
    "builder",
    "tokio1-native-tls",
    "serde",
] }
log = "0.4"
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
env_logger = "0.8"
futures-util = "0.3.30"
imap = "2.4.1"
jsonwebtoken = "9.3.0"
native-tls = "0.2.11"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
tokio-postgres-migration = "0.1"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
whois-rust = { version = "1.6.0", features = ["tokio"] }
config = "0.13"
mailparse = "0.14"
regex = "1.11.1"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = [
    "language",
] }


[dev-dependencies]
actix-rt = "2.7.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8.0"
ctor = "0.1.21"
clippy = "0.0.302"
